--- a/data/articles/10-percent.mdx
+++ b/data/articles/10-percent.mdx
@@ -14,6 +14,6 @@ toc: []
 
 Jacob's Blue and any affiliated companies or money earning projects will donate 10% of earned revenue. Forever.
 
-If you're interested learning more about where these donations go please [reach out](mailto:jake@jacobs.blue). In general my donations contribute to protecting life and/or fighting the destruction of life.
+If you're interested learning more about where these donations go please reach out. In general my donations contribute to protecting life and/or fighting the destruction of life.
 
-If you're interested in joining download the badge and start donating today.
+If you're interested in joining [email me](mailto:jake@jacobs.blue). I'll send you a graphic.
