--- a/data/articles/means-to-an-end.mdx
+++ b/data/articles/means-to-an-end.mdx
@@ -85,10 +85,10 @@ possible scenarios checking these boxes:
 
 - working at apple on logic or apple music and experimental work flows for musicians
 - working at a plug-in company
-- working at Teenage Engineering as a phsycial product designer
+- working at teenage engineering as a physical product designer
 - working at apple on apple fitness or sleep
 - working at whoop
 - working at strava
 - working in health care
 
-I'll be back in a few months to report how this turned out. Thank you for reading.
+I'll be back in a few months to report how this turned out.
