--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -49,7 +49,7 @@ The effects of these tools are greater than anticipated. Not only do they help u
 
 Zip users are purchase-aware shoppers. They're are often female, age 22-45, and live in a metropolitan area. They're using Zip for large planned purchased and frequent online shopping, this includes everything from groceries to the monthly household item restock. Zip users have goals. They want to ugpgrade their home appliances, and plan family vacations.
 
-<div className="py-8">
+<div className="">
   <div
     id="testimonial"
     className="flex mx-auto w-full not-prose p-6 text-base sm:space-x-4 space-y-4 sm:space-y-0 rounded-xl justify-center flex-col sm:flex-row columns-3"
