--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -176,5 +176,9 @@ Pay in 8 was one of the largest and most ambitious single pieces of work Zip as 
 
 We had an essential question to answer: "How will users be able to purchase with Pay in 8?" And it was my job to answer.
 
+<Video
+  src="pay-in-8-demo-full.mp4"
+  caption="Pay in 8 live demo"
+/>
 
 <ComingSoon/>
