--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -9,7 +9,7 @@ image: ''
 youtube: ''
 alt: ''
 isPublished: 'true'
-toc: [ categories, new-user-checklist, pay-in-8]
+toc: [new-user-checklist, pay-in-8, categories]
 status: 'WIP'
 version: 1
 ---
@@ -83,6 +83,53 @@ Zip is a valuable tool for our users. As an organization, we take this seriously
 
 <PageBreak />
 
+
+## New User Checklist
+
+<CaseStudyMeta
+  role="Product Design Lead + IC"
+  impact="+10% In-Store Activation"
+  timeline="~6 wks, design-production"
+  team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
+        David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
+/>
+
+New user checklist was a successful onboarding experiment focused on teaching users about the Zip app through a series of progressive onboarding tasks. It was ran against our previous static onboarding experience.
+
+The fundamental assumption I made was that new-users would be more valuable to Zip if they knew how to better use the app. Moreover, that the best approach to user education is to let users learn through doing. 
+
+<Video
+  src="new-user-hero-demo.mp4"
+  caption="New User Checklist semi-real demo"
+/>
+
+We've successfully deployed A LOT of onboarding variations at Zip and we've designed even more.
+
+<ComingSoon/>
+
+## Pay in 8
+
+<CaseStudyMeta
+  role="Product Designer Lead"
+  impact="A completey new spending vertical. Currently in rollout."
+  timeline="~24 wks, design-production"
+  team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
+        David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
+/>
+
+Essentially, Pay in 8 was/is the first extension of on our core product at Zip. Prior to this launch, Zip only allowed users to split purchases into 4 installments over 6 weeks. With the launch of Pay in 8, users are now able to split purchase in 4 **or 8** installments that can be paid back over up to 16 weeks.
+
+Pay in 8 was one of the largest and most ambitious single pieces of work Zip as an organization has set out to complete. This intiative touched every part of our organization cross-functionally and I had the honor/pleasure of leading the design work. I was supported by Clay and Jerry and their work on Pay in 8's effects on Spending Power in the app. My design contributions were focused leading design meetings, sharing out work, and designing the purchasing experience. 
+
+We had an essential question to answer: "How will users be able to purchase with Pay in 8?" And it was my job to answer.
+
+<Video
+  src="pay-in-8-demo-full.mp4"
+  caption="Pay in 8 live demo"
+/>
+
+<ComingSoon/>
+
 ## Categories
 
 <CaseStudyMeta
@@ -135,50 +182,3 @@ After, working through the touch point itself I needed to determine the actual c
 I balanced a proper order with making sure the categories overflowed the container to communicate horizontal scrolling to the user.
 
 <ComingSoon />
-
-
-## New User Checklist
-
-<CaseStudyMeta
-  role="Product Design Lead + IC"
-  impact="+10% In-Store Activation"
-  timeline="~6 wks, design-production"
-  team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
-        David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
-/>
-
-New user checklist was a successful onboarding experiment focused on teaching users about the Zip app through a series of progressive onboarding tasks. It was ran against our previous static onboarding experience.
-
-The fundamental assumption I made was that new-users would be more valuable to Zip if they knew how to better use the app. Moreover, that the best approach to user education is to let users learn through doing. 
-
-<Video
-  src="new-user-hero-demo.mp4"
-  caption="New User Checklist semi-real demo"
-/>
-
-We've successfully deployed A LOT of onboarding variations at Zip and we've designed even more.
-
-<ComingSoon/>
-
-## Pay in 8
-
-<CaseStudyMeta
-  role="Product Designer Lead"
-  impact="A completey new spending vertical. Currently in rollout."
-  timeline="~24 wks, design-production"
-  team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
-        David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
-/>
-
-Essentially, Pay in 8 was/is the first extension of on our core product at Zip. Prior to this launch, Zip only allowed users to split purchases into 4 installments over 6 weeks. With the launch of Pay in 8, users are now able to split purchase in 4 **or 8** installments that can be paid back over up to 16 weeks.
-
-Pay in 8 was one of the largest and most ambitious single pieces of work Zip as an organization has set out to complete. This intiative touched every part of our organization cross-functionally and I had the honor/pleasure of leading the design work. I was supported by Clay and Jerry and their work on Pay in 8's effects on Spending Power in the app. My design contributions were focused leading design meetings, sharing out work, and designing the purchasing experience. 
-
-We had an essential question to answer: "How will users be able to purchase with Pay in 8?" And it was my job to answer.
-
-<Video
-  src="pay-in-8-demo-full.mp4"
-  caption="Pay in 8 live demo"
-/>
-
-<ComingSoon/>
