Optimizations and bug bashing

--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -111,7 +111,8 @@ We've successfully deployed A LOT of onboarding variations at Zip and we've desi
 
 <CaseStudyMeta
   role="Product Designer Lead"
-  impact="A completey new spending vertical. Currently in rollout."
+  impact="Enabled a new spending vertical. Developed new patterns for wider product ecosystem."
+  status="Rollout to ~1500 users"
   timeline="~24 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
