--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -87,8 +87,9 @@ Zip is a valuable tool for our users. As an organization, we take this seriously
 ## New User Checklist
 
 <CaseStudyMeta
-  role="Product Design Lead + IC"
+  role="Product Design Lead"
   impact="+10% In-Store Activation"
+  status='Live to 100% of users'
   timeline="~6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
@@ -106,17 +107,20 @@ The fundamental assumption I made was that new-users would be more valuable to Z
 We've successfully deployed A LOT of onboarding variations at Zip and we've designed even more.
 
 <ComingSoon/>
+<PageBreak />
+
 
 ## Pay in 8
 
 <CaseStudyMeta
-  role="Product Designer Lead"
-  impact="Enabled a new spending vertical. Developed new patterns for wider product ecosystem."
-  status="Rollout to ~1500 users"
+  role="Product Design Lead"
+  impact='Enabled a completely new spending vertical. Developed new payment patterns fully adopted by wider product ecosystem.'
+  status="In rollout to ~1500 users"
   timeline="~24 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
+
 
 Essentially, Pay in 8 was/is the first extension of on our core product at Zip. Prior to this launch, Zip only allowed users to split purchases into 4 installments over 6 weeks. With the launch of Pay in 8, users are now able to split purchase in 4 **or 8** installments that can be paid back over up to 16 weeks.
 
@@ -130,11 +134,14 @@ We had an essential question to answer: "How will users be able to purchase with
 />
 
 <ComingSoon/>
+<PageBreak />
+
 
 ## Categories
 
 <CaseStudyMeta
-  role="Product Design Lead + IC"
+  role="Product Design Lead"
+  status='Live to 100% of users'
   impact="+8% New-User Activation"
   timeline="~6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
