--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -18,7 +18,7 @@ I've worked full-time at [Zip](https://zip.co) since November, 2021. During that
 
 This translates to my being responsible for all flows a user may interact with on their journey to complete a purchase. This includes onboarding, browsing, paying, then paying again. As far as touchpoints, I spend the vast majority of my time in the mobile iOS app but my work touches our website, browser extension, and checkout integration as well.
 
-This page stands a running and often updated log of the many tests, experiments, and net-new features I've shipped during my time at Zip. All design work on this page is lead, designed and delivered by myself unless otherwise stated. I'll go into some further context for those interested but feel free to skip ahead to [the work](#categories).
+This page stands a running and often updated log of the many tests, experiments, and net-new features I've shipped during my time at Zip. All design work on this page is lead, designed and delivered by myself unless otherwise stated. I'll go into some further context for those interested but feel free to skip ahead to [the work](#new-user-checklist).
 
 **What is Zip?**
 
@@ -101,7 +101,7 @@ The fundamental assumption I made was that new-users would be more valuable to Z
 
 <Video
   src="new-user-hero-demo.mp4"
-  caption="New User Checklist semi-real demo"
+  caption="New User Checklist Prototype - for demonstration only"
 />
 
 We've successfully deployed A LOT of onboarding variations at Zip and we've designed even more.
@@ -113,8 +113,8 @@ We've successfully deployed A LOT of onboarding variations at Zip and we've desi
 ## Pay in 8
 
 <CaseStudyMeta
-  role="Product Design Lead"
-  impact='Enabled a completely new spending vertical. Developed new payment patterns fully adopted by wider product ecosystem.'
+  role="Product Design Lead - represented design in x-functional meetings, wrote and ran user tests, presented designs and earned stakeholder buy-in, ideated and defined product vision, refined and delivered designs through Engineering and QA."
+  impact='Enabled a completely new spending vertical. Developed new payment patterns fully adopted by wider product ecosystem. Had the opportunity to represent design on a high visibility, high impact project.'
   status="In rollout to ~1500 users"
   timeline="~24 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
@@ -130,7 +130,7 @@ We had an essential question to answer: "How will users be able to purchase with
 
 <Video
   src="pay-in-8-demo-full.mp4"
-  caption="Pay in 8 live demo"
+  caption="Pay in 8 Shopping Flow Prototype - indicative of production"
 />
 
 <ComingSoon/>
@@ -140,7 +140,7 @@ We had an essential question to answer: "How will users be able to purchase with
 ## Categories
 
 <CaseStudyMeta
-  role="Product Design Lead"
+  role="Product Designer"
   status='Live to 100% of users'
   impact="+8% New-User Activation"
   timeline="~6 wks, design-production"
