--- a/unpublished/zip-experiments copy.mdx
+++ b/unpublished/zip-experiments copy.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2023-11-02'
-updated: '2023-11-20'
+updated: '2023-11-14'
 title: 'Design Log: Zip Experiments and Wins'
 description: "An often updated log of the many tests, experiments and net-new features I've shipped while working at Zip"
 thumbnail: ''
@@ -104,7 +104,9 @@ The fundamental assumption I made was that new-users would be more valuable to Z
   caption="New User Checklist Prototype - for demonstration only"
 />
 
+We've successfully deployed A LOT of onboarding variations at Zip and we've designed even more.
 
+<ComingSoon/>
 <PageBreak />
 
 
@@ -131,6 +133,7 @@ We had an essential question to answer: "How will users be able to purchase with
   caption="Pay in 8 Shopping Flow Prototype - indicative of production"
 />
 
+<ComingSoon/>
 <PageBreak />
 
 
