some new design ideas

--- a/data/designs/song-seeds.mdx
+++ b/data/designs/song-seeds.mdx
@@ -1,14 +1,14 @@
 ---
-date: '2023-11-02'
+date: '2023-12-06'
 updated: ''
-title: 'The case for Song Seeds'
+title: 'The case for song seeds'
 description: 'Creative constraints for the modern musician'
 thumbnail: ''
 tags: [creative tools, design, physical products]
 image: '/design/seedsCover.png'
 youtube: ''
 alt: ''
-isPublished: 'true'
+isPublished: 'coming soon'
 toc: []
 status: 'WIP'
 version: 1
