--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -88,12 +88,16 @@ Zip is a valuable tool for our users. As an organization, we take this seriously
 
 <CaseStudyMeta
   role="Product Design Lead"
-  impact="+10% In-Store Activation"
   status='Live to 100% of users'
   timeline="~6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
+
+<div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
+  <p className="capitalize font-bold">impact</p>
+  <ImpactCard copy="+10% In-store Shopping Activation"/>
+</div>
 
 New user checklist was a successful onboarding experiment focused on teaching users about the Zip app through a series of progressive onboarding tasks. It was ran against our previous static onboarding experience.
 
@@ -112,12 +116,19 @@ The fundamental assumption I made was that new-users would be more valuable to Z
 
 <CaseStudyMeta
   role="Product Design Lead - represented design in x-functional meetings, wrote and ran user tests, presented designs and earned stakeholder buy-in, ideated and defined product vision, refined and delivered designs through Engineering and QA."
-  impact='Enabled a completely new spending vertical. Developed new payment patterns fully adopted by wider product ecosystem. Had the opportunity to represent design on a high visibility, high impact project.'
+
   status="In rollout to ~1500 users"
   timeline="~24 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
+
+<div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
+  <p className="capitalize font-bold">impact</p>
+  <ImpactCard symbol="＄" copy="Enabled a completely new spending vertical"/>
+  <ImpactCard symbol="❖" copy="Developed new payment patterns that were widely adopted"/>
+  <ImpactCard symbol="♖" copy="Represented design on a high visibility, high impact project"/>
+</div>
 
 
 Essentially, Pay in 8 was/is the first extension of on our core product at Zip. Prior to this launch, Zip only allowed users to split purchases into 4 installments over 6 weeks. With the launch of Pay in 8, users are now able to split purchase in 4 **or 8** installments that can be paid back over up to 16 weeks.
@@ -139,11 +150,14 @@ We had an essential question to answer: "How will users be able to purchase with
 <CaseStudyMeta
   role="Product Designer"
   status='Live to 100% of users'
-  impact="+8% New-User Activation"
   timeline="~6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
+<div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
+  <p className="capitalize font-bold">impact</p>
+  <ImpactCard copy="+8% New-User Activation"/>
+</div>
 
 The categories UI experiment was a design emergent initiative that we were able to slate into our team roadmap because of some extra eng capacity. The design team came together to generate ideas around what might be easy wins in case we had the opportunity to put some engineering capacity towards design led intiatives. One of the initiatives we brainstormed was showing some love to our categories experience.
 
