Impact card and Footer on Designs

--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -88,8 +88,8 @@ Zip is a valuable tool for our users. As an organization, we take this seriously
 
 <CaseStudyMeta
   role="Product Design Lead"
-  status='Live to 100% of users'
-  timeline="~6 wks, design-production"
+  status='Live - 100% of users'
+  timeline="6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
@@ -117,17 +117,19 @@ The fundamental assumption I made was that new-users would be more valuable to Z
 <CaseStudyMeta
   role="Product Design Lead - represented design in x-functional meetings, wrote and ran user tests, presented designs and earned stakeholder buy-in, ideated and defined product vision, refined and delivered designs through Engineering and QA."
 
-  status="In rollout to ~1500 users"
-  timeline="~24 wks, design-production"
+  status="Rollout ~1500 users"
+  timeline="24 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
 
-<div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
+<div className="not-prose text-base mx-auto max-w-[600px] w-full  flex-col font-jbd  space-y-3 pt-4 ">
   <p className="capitalize font-bold">impact</p>
-  <ImpactCard symbol="＄" copy="Enabled a completely new spending vertical"/>
-  <ImpactCard symbol="❖" copy="Developed new payment patterns that were widely adopted"/>
+ 
+  <ImpactCard symbol="＄" copy="Enabled a new spending vertical"/>
+  <ImpactCard symbol="❖" copy="Developed new widely adopted, payment patterns"/>
   <ImpactCard symbol="♖" copy="Represented design on a high visibility, high impact project"/>
+  
 </div>
 
 
@@ -150,11 +152,11 @@ We had an essential question to answer: "How will users be able to purchase with
 <CaseStudyMeta
   role="Product Designer"
   status='Live to 100% of users'
-  timeline="~6 wks, design-production"
+  timeline="6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
-<div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
+<div className="not-prose text-base mx-auto max-w-[600px]  w-full flex-col font-jbd  space-y-3 pt-4 ">
   <p className="capitalize font-bold">impact</p>
   <ImpactCard copy="+8% New-User Activation"/>
 </div>
