Clean up + impact cards

--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2023-11-02'
-updated: '2023-11-20'
+updated: '2023-12-08'
 title: 'Design Log: Zip Experiments and Wins'
 description: "An often updated log of the many tests, experiments and net-new features I've shipped while working at Zip"
 thumbnail: ''
@@ -96,7 +96,8 @@ Zip is a valuable tool for our users. As an organization, we take this seriously
 
 <div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
   <p className="capitalize font-bold">impact</p>
-  <ImpactCard copy="+10% In-store Shopping Activation"/>
+  <ImpactCard copy="+10% in-store new-user activation"/>
+  <ImpactCard symbol="❖" copy="Developed a new, widely adopted onboarding pattern"/>
 </div>
 
 New user checklist was a successful onboarding experiment focused on teaching users about the Zip app through a series of progressive onboarding tasks. It was ran against our previous static onboarding experience.
@@ -126,8 +127,8 @@ The fundamental assumption I made was that new-users would be more valuable to Z
 <div className="not-prose text-base mx-auto max-w-[600px] w-full  flex-col font-jbd  space-y-3 pt-4 ">
   <p className="capitalize font-bold">impact</p>
  
-  <ImpactCard symbol="＄" copy="Enabled a new spending vertical"/>
-  <ImpactCard symbol="❖" copy="Developed new widely adopted, payment patterns"/>
+  <ImpactCard symbol="$" copy="Enabled a new spending vertical"/>
+  <ImpactCard symbol="❖" copy="Developed several new, widely adopted payment patterns"/>
   <ImpactCard symbol="♖" copy="Represented design on a high visibility, high impact project"/>
   
 </div>
@@ -151,14 +152,14 @@ We had an essential question to answer: "How will users be able to purchase with
 
 <CaseStudyMeta
   role="Product Designer"
-  status='Live to 100% of users'
+  status='Live - 100% of users'
   timeline="6 wks, design-production"
   team="Emily, PM - Clay, Design Director - Kathryn, Affiliate - Manu, Data
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
 <div className="not-prose text-base mx-auto max-w-[600px]  w-full flex-col font-jbd  space-y-3 pt-4 ">
   <p className="capitalize font-bold">impact</p>
-  <ImpactCard copy="+8% New-User Activation"/>
+  <ImpactCard copy="+8% new-user activation"/>
 </div>
 
 The categories UI experiment was a design emergent initiative that we were able to slate into our team roadmap because of some extra eng capacity. The design team came together to generate ideas around what might be easy wins in case we had the opportunity to put some engineering capacity towards design led intiatives. One of the initiatives we brainstormed was showing some love to our categories experience.
