Small tweaks and updats
- journal parity
- back to top on toc
- footer extendability
- posts update
- main-header extendability
- blog extendability

--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -5,7 +5,7 @@ title: 'Design Log: Zip Experiments and Wins'
 description: "An often updated log of the many tests, experiments and net-new features I've shipped while working at Zip"
 thumbnail: ''
 tags: []
-image: '/design/zip-hero16:91.png'
+image: ''
 youtube: ''
 alt: ''
 isPublished: 'true'
