--- a/data/articles/life-in-seasons.mdx
+++ b/data/articles/life-in-seasons.mdx
@@ -20,19 +20,27 @@ I've come to view my life as a series of goals. The effort towards those goals i
 
 This is my first time formalizing this concept but I've been using it for awhile.
 
-I relaized that I could become the man I wanted to be some time around 18. That the distance between who I am now and who I want to be is always just a series of habits, which result in a stack of proof that form my idea of who I am.
+I realized that I could become the man I wanted to be some time around 18. That the distance between who I am now and who I want to be is always just a series of habits. The result of which is a stack of proof that form my idea of who I am.
 
-Eg. who I am now is a un-fit person, who i want to be is a fit person. I'll form a habit like running. After many months, I've run very many times. This actually helps me be more fit. I think of myself as more fit becuase I've prooved it to myself with the months of running reps.
+Eg. Who I am now is a un-fit person. Who I want to be is a fit person. I'll form a habit like running. After many months, I've run very many times. This actually helps me be more fit. I think of myself as more fit becuase I've prooved it to myself trhough many reps of running.
 
-I repeated this process with so many different micro-areas of my life that I've lost count.
+I repeated something like this process with so many different micro-areas of my life that I've lost count.
 
 After repeating this process countless times with countless optimizations I reached a point where the 80/20 of living the life I want to live is very clear. I don't mean to say I know it all. I'm still learning all the time. I mean to say that I have a series of frameworks for getting myself 80% there at any given time.
 
-If that's so what's the problem?
+If that's so, what's the problem?
 
-As I've aged, despite knowing how to be who I want to be at any given moment, there is a unique phenomenon that pertains to me at least, where despite "knowing" these things, I can't quite hold them all in my mind in a given time. This results in my skewing off the path occasionally.
+As I've aged, despite knowing how to be who I want to be at any given moment, there is a unique phenomenon that pertains to me at least, where despite "knowing" these things, I can't quite hold them all in my mind in a given time.
+
+I liken this phenomenon to [Dunbar's number](https://en.wikipedia.org/wiki/Dunbar%27s_number), just applied to the [ecology of frameworks](http://jacobs.blue/journal/ecology-of-frameworks) I can maintain in my brain at any given time.
+
+My inability to hold all these lessons all the time results in my skewing off the path occasionally.
 
 A younger me would've been critical of my inability to do it all. However, with age I've also learned more grace with others and myself. I've come to appreciate these "skews" in different directions as "seasons" of life.
+
+The birth of my son was a cannon event that resulted in intense focus on learning how to be a parent. When something this big happens there is no other option than to allocate resources towards the biggest need. With no regret at all, spending more energy on my son and partner meant that many other things had less of my energy. It has to come from somewhere.
+
+At a certain point, instead of struggling against the tides of my ever changing life with every changing needs, I've come to lean into to where I'm needed and where my energy is carrying the most momentum, understanding that just like the seasons of our planet, my life will also turn over to a new season.
 
 ### Adopting player traits
 
@@ -64,7 +72,7 @@ My goal is to be a good, well rounded man. Here's what that might look like subb
   />
 </div>
 
-Within this diagram it's also intersting to me to see the breakdown of how I'm spending my time within certain areas.(my rank in each of these more or less is the amoutn of time I spend in these)
+Within this diagram it's also intersting to me to see the breakdown of how I'm spending my time within certain areas.(my rank in each of these more or less is the amount of time I spend in these)
 
 For example body could breakdown into :mobility, resistance training, aerobic training, recovery, and fun. Jacob's blue could breakdown into by medium to give myself a snapshot of how I'm spending my time.
 
