--- a/data/songs/born-in-the-sunset-thoughts-to-oasis-b-sides.mdx
+++ b/data/songs/born-in-the-sunset-thoughts-to-oasis-b-sides.mdx
@@ -7,9 +7,9 @@ written: 'J. Medure'
 produced: 'J. Medure'
 released: '2023-12-31'
 album: 'Born in the Sunset: Thoughts to Oasis - B-SIDES'
-albumLink: ''
+albumLink: 'none'
 description: 'Remnants of a past life'
-track: ''
+track: 'none'
 artwork: '/cover-art/bsides.jpg'
 alt: 'song art'
 explicit: 'true'
