--- a/data/songs/fiya.mdx
+++ b/data/songs/fiya.mdx
@@ -13,7 +13,7 @@ description: ''
 artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/5rh5FpPR92DyNpx2v9u5TG'
-explicit: ''
+explicit: 'false'
 links:
   [
     'https://open.spotify.com/track/5rh5FpPR92DyNpx2v9u5TG',
