--- a/data/songs/hard-of-hearing.mdx
+++ b/data/songs/hard-of-hearing.mdx
@@ -13,7 +13,7 @@ description: ''
 artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/7z19aMKlIaGNB3GfUmj6M2'
-explicit: 'e'
+explicit: 'true'
 links:
   [
     'https://open.spotify.com/album/3nAER17uMf2QOuJwSCIOJB',
