--- a/data/songs/i-cant-shake-you.mdx
+++ b/data/songs/i-cant-shake-you.mdx
@@ -12,7 +12,7 @@ track: '4'
 description: ' '
 artwork: '/cover-art/bits.jpg'
 alt: 'song art'
-explicit: ''
+explicit: 'false'
 links:
   [
     'https://open.spotify.com/track/02zaOEskC1ZBsmHkx6I3Bm',
