--- a/data/songs/maybe-i-give-up.mdx
+++ b/data/songs/maybe-i-give-up.mdx
@@ -13,7 +13,7 @@ track: ''
 artwork: '/cover-art/migu.jpg'
 alt: 'song art'
 spotifyEmbed: 'album/3uVdTPnjj6XZOIOdsDOVbj'
-explicit: ''
+explicit: 'false'
 links:
   [
     'https://open.spotify.com/album/3uVdTPnjj6XZOIOdsDOVbj',
