--- a/data/songs/on-my-pixies-shit.mdx
+++ b/data/songs/on-my-pixies-shit.mdx
@@ -9,7 +9,7 @@ released: '2020-12-31'
 album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '6'
-description: ''
+description: 'none'
 artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/7tNHEt5SMDrUtxHyLiyjR9'
