--- a/data/songs/two-yellow-birds.mdx
+++ b/data/songs/two-yellow-birds.mdx
@@ -12,7 +12,7 @@ track: '7'
 description: ''
 artwork: '/cover-art/bits.jpg'
 alt: 'song art'
-explicit: 'true'
+explicit: 'false'
 links:
   [
     'https://open.spotify.com/track/3EbDRSKEdhl8cVVHAL7LId',
