--- a/data/articles/life-in-seasons.mdx
+++ b/data/articles/life-in-seasons.mdx
@@ -9,38 +9,38 @@ image: ''
 youtube: ''
 alt: ''
 isPublished: 'false'
-toc: [adopting-player-traits]
+toc: []
 status: ''
 version: 1
 ---
 
-The striving towards a goal will always be sweeter than achieveing the goal, whether we realize it or not.
-
-I've come to view my life as a series of goals. The effort towards those goals is what gives my life purpose and meaning. Structuring my life in this way directly contributes to my happiness.
+{/* I've come to view my life as a series of goals. The effort towards those goals is what gives my life purpose and meaning. Structuring my life in this way directly contributes to my happiness.
 
 This is my first time formalizing this concept but I've been using it for awhile.
 
-I realized that I could become the man I wanted to be some time around 18. That the distance between who I am now and who I want to be is always just a series of habits. The result of which is a stack of proof that form my idea of who I am.
+I realized that I could become the man I wanted to be some time around 18. That the distance between who I am now and who I want to be is always just a series of goals, systems, then habits. The result of which is a stack of proof that form my idea of who I am.
 
-Eg. Who I am now is a un-fit person. Who I want to be is a fit person. I'll form a habit like running. After many months, I've run very many times. This actually helps me be more fit. I think of myself as more fit becuase I've prooved it to myself trhough many reps of running.
-
-I repeated something like this process with so many different micro-areas of my life that I've lost count.
-
-After repeating this process countless times with countless optimizations I reached a point where the 80/20 of living the life I want to live is very clear. I don't mean to say I know it all. I'm still learning all the time. I mean to say that I have a series of frameworks for getting myself 80% there at any given time.
+Optimizing key areas of my life, learning different mental models, setting goals, creating systems, building habits, repeating this process over and over again; I've come to realize that the 80/20 of living the life I want to live is both very clear and attainable.
 
 If that's so, what's the problem?
 
-As I've aged, despite knowing how to be who I want to be at any given moment, there is a unique phenomenon that pertains to me at least, where despite "knowing" these things, I can't quite hold them all in my mind in a given time.
+As I've aged, despite knowing how to be who I want to be at any given moment, there is a unique phenomenon I continue to experience, where despite "knowing" these what to strive for and how to get there, I can't quite hold all of these ideas in my mind in a given time.
 
-I liken this phenomenon to [Dunbar's number](https://en.wikipedia.org/wiki/Dunbar%27s_number), just applied to the [ecology of frameworks](http://jacobs.blue/journal/ecology-of-frameworks) I can maintain in my brain at any given time.
+This results in my occasional wander off the path.
 
-My inability to hold all these lessons all the time results in my skewing off the path occasionally.
+A younger me would've been critical of my inability to execute. However, with age I've also learned more grace . I've come to appreciate my stumblingin different directions as "seasons" of life.
 
-A younger me would've been critical of my inability to do it all. However, with age I've also learned more grace with others and myself. I've come to appreciate these "skews" in different directions as "seasons" of life.
+Beyond remembering all the tools to be great in all areas of my life, there's also the humbling realization of */}
 
-The birth of my son was a cannon event that resulted in intense focus on learning how to be a parent. When something this big happens there is no other option than to allocate resources towards the biggest need. With no regret at all, spending more energy on my son and partner meant that many other things had less of my energy. It has to come from somewhere.
+The birth of my son was a cannon event that resulted in intense focus on learning how to be a parent. When something this big happens there is no other option than to allocate resources towards the biggest need. Someone's life was literally at stake.
 
-At a certain point, instead of struggling against the tides of my ever changing life with every changing needs, I've come to lean into to where I'm needed and where my energy is carrying the most momentum, understanding that just like the seasons of our planet, my life will also turn over to a new season.
+With no regret at all, spending more energy on my son and partner meant that many other areas of my life had less of my energy. 
+
+This included my health, my art, and my personal development, to name a few.
+
+A younger me would've been critical of my inability to execute. However, with age I've also learned more grace. I've come to appreciate this reallocation of resources as "seasons" of life.
+
+At a certain point, instead of struggling against the tides of my ever changing life with ever changing needs, I've come to lean into where I'm needed and where my energy is carrying the most momentum, understanding that just like the seasons of our planet, my life will also turn over to a new season.
 
 ### Adopting player traits
 
@@ -59,24 +59,21 @@ If you've ever played FIFA and edited your starting lineup you've seen a visual 
 
 It's interesting to me to think about my self through this player trait lens.
 
-My goal is to be a good, well rounded man. Here's what that might look like subbing in the areas of my life I'd like to work on in order to be a good man. But really this diagram is so flexible when applied to my life it's just a really helfpul way of looking at how I'm spending my time. The pillars could be anything.
+Rather than, "pace" or "shooting" I migth evaluate my body and creative pursuits. My goal is to be a good, well rounded man.   Leveraging this player trait framework, It's clear to see how I'm spending my time and what season I'm in.
 
-<div className="pt-3 pb-6">
-  <BlogImage
-    src="/journal/player-traits-fifa.png"
-    alt="Player traits UI from FIFA"
-    fig="Source"
-    type="2"
-    extSrc="https://www.fifa-infinity.com/fifa-22/new-fifa-22-career-mode-features-confirmed/"
-    extSrcCopy="www.fifa-infinity.com"
-  />
-</div>
+I found this so helpful during my personal reviews that I built a small web app so others might take advantage of this framework too.
 
-Within this diagram it's also intersting to me to see the breakdown of how I'm spending my time within certain areas.(my rank in each of these more or less is the amount of time I spend in these)
+<Video
+  src="seasonsApp_loading.mp4"
+  caption="Your life happens in seasons"
+/>
+{/* 
+As I started documenting my own skill spikes it became clear to me that how well I was doing in a given area was more or less a proxy for how much time I was spending in that area. This maps nicely to my idea of habits and gives me an opportunity to get better at any area of my life by adjusting my time spent in that area.
 
 For example body could breakdown into :mobility, resistance training, aerobic training, recovery, and fun. Jacob's blue could breakdown into by medium to give myself a snapshot of how I'm spending my time.
 
-All of these are helpful only in a review setting. Going forward, I plan to just add these visualizations to my personal review cycles.
+All of these are helpful only in a review setting. Going forward, I plan to just add these visualizations to my personal review cycles. */}
 
-This is a cool process because ultimately life is sweeter striving to the ideal, than being the ideal. The fact that I'm human, means I never expect to get there but with something always to strive for, I know at least I'll have fun trying.
+Life feels sweeter striving towards the ideal, than obtaining the ideal. The fact that I'm human, means I never expect to get all the way there. With something always to strive for, I know at least I'll have fun trying.
 
+View your life in seasons at [seasons.jacobs.blue](https://seasons.jacobs.blue).
