--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -54,7 +54,7 @@ Zip users are purchase-aware shoppers. They're are often female, age 22-45, and 
     id="testimonial"
     className="flex mx-auto w-full not-prose p-6 text-base sm:space-x-4 space-y-4 sm:space-y-0 rounded-xl justify-center flex-col sm:flex-row columns-3"
   >
-    <div className="p-8 bg-neutral-100 border space-y-2 rounded-xl not-prose  w-auto flex-1 flex-col flex">
+    <div className="p-8 bg-neutral-100 dark:bg-neutral-800 border dark:border-white/10 space-y-2 rounded-xl not-prose  w-auto flex-1 flex-col flex">
       <span className="font-bold text-3xl italic">"</span>
       <span>
         I am currently expecting my first baby in 8 weeks and I was really
@@ -65,16 +65,16 @@ Zip users are purchase-aware shoppers. They're are often female, age 22-45, and 
         this little bundle of joy! I&#39;m so happy with this app, plus I like
         how I can pay ahead of time if I wanted to.
       </span>
-      <span className="text-black/50 text-sm pt-2">- Real Zip User</span>
+      <span className="text-black/50 dark:text-white/50 text-sm pt-2">- Real Zip User</span>
     </div>
-    <div className="p-8 bg-neutral-100 border space-y-2 rounded-xl not-prose w-auto flex-1 flex-col flex">
+    <div className="p-8 bg-neutral-100 dark:bg-neutral-800 border dark:border-white/10 space-y-2 rounded-xl not-prose w-auto flex-1 flex-col flex">
       <span className="font-bold text-3xl italic">"</span>
       <span>
         Zip has helped me purchase food at a grocery store with a low payment
-        plan. I’m so happy.
+        plan. I&#39;m so happy.
       </span>
       <span>You helped me feed my family. Thank you, Zip!</span>
-      <span className="text-black/50 text-sm pt-2">- Real Zip User</span>
+      <span className="text-black/50 dark:text-white/50 text-sm pt-2">- Real Zip User</span>
     </div>
   </div>
 </div>
@@ -95,7 +95,7 @@ Zip is a valuable tool for our users. As an organization, we take this seriously
 />
 
 <div className="not-prose text-base mx-auto max-w-[600px] w-full flex-col font-jbd  space-y-3 pt-4 ">
-  <p className="capitalize font-bold">impact</p>
+  <p className="capitalize text-black/50 dark:text-white/50">impact</p>
   <ImpactCard copy="+10% in-store new-user activation"/>
   <ImpactCard symbol="❖" copy="Developed a new, widely adopted onboarding pattern"/>
 </div>
@@ -125,7 +125,7 @@ The fundamental assumption I made was that new-users would be more valuable to Z
 />
 
 <div className="not-prose text-base mx-auto max-w-[600px] w-full  flex-col font-jbd  space-y-3 pt-4 ">
-  <p className="capitalize font-bold">impact</p>
+  <p className="capitalize text-black/50 dark:text-white/50">impact</p>
  
   <ImpactCard symbol="$" copy="Enabled a new spending vertical"/>
   <ImpactCard symbol="❖" copy="Developed several new, widely adopted payment patterns"/>
@@ -158,7 +158,7 @@ We had an essential question to answer: "How will users be able to purchase with
         David, EM - Kibi,QA - Mike, Engineer - Chris, Engineer"
 />
 <div className="not-prose text-base mx-auto max-w-[600px]  w-full flex-col font-jbd  space-y-3 pt-4 ">
-  <p className="capitalize font-bold">impact</p>
+  <p className="capitalize text-black/50 dark:text-white/50">impact</p>
   <ImpactCard copy="+8% new-user activation"/>
 </div>
 
